[metadata]
name = Easy MD Analysis
version = attr: EMDA.__version__
author = Miquel Canyelles
author_email = mcanyellesnino@gmail.com
description = Easy MD Analysis (EMDA) is a Python package based on MDAnalysis created with the aim of providing an easy, yet powerful way to perform analysis of MD simulations.
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = mdanalysis, molecular dynamics,  
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires=
	mdanalysis
	tqdm
	matplotlib

[options.packages.find]
exclude =
    upload_new_version.sh
    TO-DO.md
    .github
